--- a/requirements.txt
+++ b/requirements.txt
@@ -137,3 +137,10 @@ websocket-client @ file:///C:/b/abs_5dmnxxoci9/croot/websocket-client_1715878351
 Werkzeug==3.1.3
 win-inet-pton @ file:///C:/ci_310/win_inet_pton_1642658466512/work
 wrapt==1.17.3
+torch
+torchvision
+open_clip_torch
+faiss-cpu
+pillow
+pandas
+tqdm
